--- a/app/frontend/templates/404.html
+++ b/app/frontend/templates/404.html
@@ -4,9 +4,9 @@
 {% block content %}
     <div class="container">
         <div class="bg-white p-5 rounded-lg m-3">
-            <h1 class="display-4">404, page not found</h1>
+            <h1 class="display-4">{{ _('404, page not found') }}</h1>
               <hr class="my-4">
-            <p class="lead">It seems page is missing or in development</p>
+            <p class="lead">{{ _('It seems page is missing or in development') }}</p>
         </div>
     </div>
 {% endblock %}
