--- a/app/frontend/templates/about.html
+++ b/app/frontend/templates/about.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
-{% block title %}About Us{% endblock %}
+{% block title %}{{ _('About Us') }}{% endblock %}
 
 {% block content %}
     <div class="container bg-white">
-        <h1 class="ps-2 display-4">About Us</h1>
+        <h1 class="ps-2 display-4">{{ _('About Us') }}</h1>
         <hr>
         <div class="px-4 py-4">
             <p>
-                We are lovely team that really wants to sleep
+                {{ _('We are lovely team that really wants to sleep') }}
             </p>
         </div>
 
