--- a/app/frontend/templates/favorites.html
+++ b/app/frontend/templates/favorites.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Favorites{% endblock %}
+{% block title %}{{ _('Favorites') }}{% endblock %}
 
 {% block content %}
     <div>
@@ -26,18 +26,18 @@
                     <div class="mt-2 nav ps-2 flex-column nav-pills me-3"
                          aria-orientation="vertical">
                         <a class="nav-link btn btn-lg remove-glow" href="{{ url_for('tickets_page') }}"
-                           aria-selected="false">Tickets
+                           aria-selected="false">{{ _('Tickets') }}
                         </a>
                         <a class="nav-link btn btn-lg active remove-glow" href="{{ url_for('favorites_page') }}"
-                           aria-selected="true">Favorites
+                           aria-selected="true">{{ _('Favorites') }}
                         </a>
                         <a class="nav-link btn btn-lg remove-glow" href="{{ url_for('settings_page') }}"
-                           aria-selected="false">Settings
+                           aria-selected="false">{{ _('Settings') }}
                         </a>
                     </div>
                     <div class="d-flex flex-column flex-grow-1 ms-5">
                         <div class="mb-3">
-                            <h1 class="display-5">Concerts</h1>
+                            <h1 class="display-5">{{ _('Concerts') }}</h1>
                         </div>
 
                         {% for c in concerts %}
@@ -56,13 +56,13 @@
                                         <div class="row">
                                             <div class="col-md">
                                                 <div class="card-body">
-                                                    <h5 class="card-title">Place</h5>
+                                                    <h5 class="card-title">{{ _('Place') }}</h5>
                                                     <p class="card-text text-truncate">{{ c["hall"]['hall_name'] }}</p>
                                                 </div>
                                             </div>
                                             <div class="col-md">
                                                 <div class="card-body">
-                                                    <h5 class="card-title">Date</h5>
+                                                    <h5 class="card-title">{{ _('Date') }}</h5>
                                                     <p class="card-text">{{ c["concert_date"]|dt }}</p>
                                                 </div>
                                             </div>
@@ -75,7 +75,7 @@
                         {% endfor %}
 
                         <div class="mb-3">
-                            <h1 class="display-5">Artists</h1>
+                            <h1 class="display-5">{{ _('Artists') }}</h1>
                         </div>
 
                         {% for a in artists %}
