--- a/app/frontend/templates/includes/_footer.html
+++ b/app/frontend/templates/includes/_footer.html
@@ -5,10 +5,14 @@
 
         <ul class="navbar-nav ms-auto">
             <li class="nav-item me-2">
-                <a class="nav-link" aria-current="page" href="{{ url_for('about_page') }}">About Us</a>
+                <a class="nav-link" aria-current="page" href="{{ url_for('about_page') }}">{{  _('About Us') }}</a>
             </li>
             <li class="nav-item me-2">
-                <a class="nav-link" aria-current="page" href="{{ url_for('contacts_page') }}">Contacts</a>
+                <a class="nav-link" aria-current="page" href="{{ url_for('contacts_page') }}">{{  _('Contacts') }}</a>
+            </li>
+
+            <li class="nav-item me-2">
+                <a class="nav-link btn btn-primary text-light" aria-current="page" href="{{ url_for('change_locale') }}">{{  _('Change locale') }}</a>
             </li>
         </ul>
     </div>
