--- a/app/frontend/templates/includes/_navbar.html
+++ b/app/frontend/templates/includes/_navbar.html
@@ -14,24 +14,24 @@
                        aria-expanded="false" aria-current="page" href="#"><i
                             class="bi bi-geo-alt"></i>
                         {% if session['city'] == 2 %}
-                            <u>Moscow</u>
+                            <u>{{ _('Moscow') }}</u>
                         {% elif session['city'] == 3 %}
-                            <u>Saint Petersburg</u>
+                            <u>{{ _('Saint Petersburg') }}</u>
                         {% else %}
-                            <u>Voronezh</u>
+                            <u>{{ _('Voronezh') }}</u>
                         {% endif %}
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="{{ url_for('change_city', id=1) }}">Voronezh</a></li>
-                        <li><a class="dropdown-item" href="{{ url_for('change_city', id=2) }}">Moscow</a></li>
-                        <li><a class="dropdown-item" href="{{ url_for('change_city', id=3) }}">Saint Petersburg</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('change_city', id=1) }}">{{ _('Voronezh') }}</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('change_city', id=2) }}">{{ _('Moscow') }}</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('change_city', id=3) }}">{{ _('Saint Petersburg') }}</a></li>
                     </ul>
                 </li>
             </ul>
 
             <form class="d-flex justify-content-center mb-2 mb-lg-0" action="{{ url_for('search_page') }}">
                 <input class="form-control remove-glow  border-end-0 border border-dark rounded-pill rounded-end"
-                       style="min-width: 350px;" name="search" type="search" placeholder="Search" aria-label="Search">
+                       style="min-width: 350px;" name="search" type="search" placeholder="{{ _('Search') }}" aria-label="Search">
                 <button class="btn remove-glow btn-outline-dark border-start-0 rounded-pill rounded-start"
                         type="submit"><i class="bi bi-search"></i></button>
             </form>
@@ -40,7 +40,7 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 justify-content-end">
                     <li class="nav-item me-2 mb-2 mb-lg-0 justify-content-start">
                         <a class="nav-link" style="color: black !important;" aria-current="page"
-                           href="{{ url_for('tickets_page') }}"><u>My tickets</u></a>
+                           href="{{ url_for('tickets_page') }}"><u>{{ _('My tickets') }}</u></a>
                     </li>
                     <li class="nav-item me-2 mb-2 mb-lg-0 dropdown">
                         <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1"
@@ -54,12 +54,12 @@
                             {% endif %}
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="{{ url_for('favorites_page') }}">Favorites</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('settings_page') }}">Settings</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('favorites_page') }}">{{ _('Favorites') }}</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('settings_page') }}">{{ _('Settings') }}</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="{{ url_for('logout') }}">Log out</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('logout') }}">{{ _('Log out') }}</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -67,11 +67,11 @@
                 <ul class="navbar-nav nav-pills ms-auto mb-2 mb-lg-0 justify-content-end">
                     <li class="nav-item me-2 mb-2 mb-lg-0 text-center">
                         <a class="nav-link" style="color: black !important;" aria-current="page"
-                           href="{{ url_for('login_page') }}">Login</a>
+                           href="{{ url_for('login_page') }}">{{ _('Login') }}</a>
                     </li>
                     <li class="nav-item me-2 mb-2 mb-lg-0 text-center">
                         <a class="nav-link active" style="color: white !important;"
-                           href="{{ url_for('registration_page') }}">Sign Up</a>
+                           href="{{ url_for('registration_page') }}">{{ _('Sign Up') }}</a>
                     </li>
                 </ul>
             {% endif %}
