--- a/app/frontend/templates/registration.html
+++ b/app/frontend/templates/registration.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Registration{% endblock %}
+{% block title %}{{ _('Registration') }}{% endblock %}
 
 {% block content %}
 
@@ -7,35 +7,35 @@
         <form method="post"
               oninput='password_check.setCustomValidity(password_check.value != password.value ? "Passwords do not match." : "")'>
             <img class="mb-4" src="../static/logo.png" alt="" width="300" height="150">
-            <h1 class="h3 mb-3 fw-normal">Sign Up</h1>
+            <h1 class="h3 mb-3 fw-normal">{{ _('Sign Up') }}</h1>
 
             <div class="form-floating">
                 <input type="text" class="form-control remove-glow" name="nickname" id="floatingInput" minlength="5"
                        placeholder="Login" required>
-                <label for="floatingInput">Login</label>
+                <label for="floatingInput">{{ _('Login') }}</label>
             </div>
             <div class="form-floating">
                 <input type="email" class="form-control remove-glow" name="email" id="floatingInput"
                        placeholder="name@example.com" required>
-                <label for="floatingInput">Email address</label>
+                <label for="floatingInput">{{ _('Email address') }}</label>
             </div>
             <div class="form-floating">
                 <input type="password" class="form-control remove-glow" name=password id="floatingPassword"
                        minlength="8" placeholder="Password" required>
-                <label for="floatingPassword">Password</label>
+                <label for="floatingPassword">{{ _('Password') }}</label>
             </div>
             <div class="form-floating">
                 <input type="password" class="form-control remove-glow" name=password_check id="floatingPassword"
                        minlength="8" placeholder="Password" required>
-                <label for="floatingPassword">Repeat password</label>
+                <label for="floatingPassword">{{ _('Repeat password') }}</label>
             </div>
 
             <div class="checkbox mb-3 mt-3">
                 <label>
-                    <input type="checkbox" name="remember"> Remember me
+                    <input type="checkbox" name="remember"> {{ _('Remember me') }}
                 </label>
             </div>
-            <button class="w-100 btn btn-lg btn-primary text-light" type="submit">Sign in</button>
+            <button class="w-100 btn btn-lg btn-primary text-light" type="submit">{{ _('Sign up') }}</button>
         </form>
     </div>
 
@@ -44,7 +44,7 @@
         {% for m in messages %}
             <div class="toast fade show" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
                 <div class="toast-header">
-                    <strong class="me-auto">Message</strong>
+                    <strong class="me-auto">{{ _('Message') }}</strong>
                     <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
                 </div>
                 <div class="toast-body">
