--- a/app/frontend/templates/index.html
+++ b/app/frontend/templates/index.html
@@ -84,7 +84,7 @@
 
         {% if session['logged_in'] and session['spotify'] %}
 
-            <div class="ms-5 mb-2 d-flex">
+            <div class="mb-2 d-flex">
                 <span class="fs-1 fw-light underline">{{ _('Recommendations') }}</span>
                 <img src="../static/spotify/Spotify_Logo_RGB_Green.png" class="img-fluid mt-3 ms-2"
                      style="height: 2.5rem;"
@@ -130,7 +130,7 @@
 
         {% endif %}
 
-        <div class="ms-5 mb-2">
+        <div class="mb-2">
             <span class="fs-1 fw-light underline">{{ _('Upcoming Events') }}</span>
         </div>
 
