--- a/app/frontend/templates/buying.html
+++ b/app/frontend/templates/buying.html
@@ -17,9 +17,9 @@
                             <path d="M10 10 C 20 20, 40 20, 50 10" stroke="#777" stroke-width="1"
                                   fill="transparent"></path>
                         </svg>
-                        {% for i, hall in enumrate(halls['hall_zone']) %}
+                        {% for hall in halls['hall_zone'] %}
                             <div class="p-2 bd-highlight flex-grow-1 d-flex align-items-center justify-content-center"
-                                 style="background-color: {{ palette[i] }}">
+                                 style="background-color: {{ palette[loop.index - 1] }}">
                                 <p class="p-1 px-2 rounded-pill bg-light">{{ hall['price'] }}
                                     {{ _('credits') }}: {{ hall['free_capacity'] }}/{{ hall['capacity'] }}</p>
                             </div>
@@ -29,7 +29,7 @@
 
             </div>
             <form class="col-lg-5" id="form" method="post">
-                {% for hall in enumrate(halls['hall_zone']) %}
+                {% for hall in halls['hall_zone'] %}
                     <div class="card mb-3 p-2 shadow">
                         <div class="row g-0">
                             <div class="col">
@@ -37,7 +37,7 @@
                                 <hr>
                                 <div class="input-group d-flex justify-content-end">
                                     <input type="number" id="num{{ hall['hall_zone_id'] }}" readonly class="read form-control" min="0"
-                                           value="0" name="{{ hall['hall_zone_id'] }}"
+                                           value="0" name="h{{ hall['hall_zone_id'] }}"
                                            max="{{ hall['free_capacity'] }}">
                                     <button class="btn btn-outline-secondary minus" type="button">-</button>
                                     <button class="btn btn-outline-secondary" id="plus{{ hall['hall_zone_id'] }}" type="button">+
@@ -68,11 +68,11 @@
                 $input.change();
                 return false;
             });
-            {% for hall in enumrate(halls['hall_zone']) %}
+            {% for hall in halls['hall_zone'] %}
                 $('#plus{{ hall['hall_zone_id'] }}').click(function () {
                     var $input = $(this).parent().find('input');
                     var count = parseInt($input.val()) + 1;
-                    count = count > {{ i }} ? {{ i }} : count;
+                    count = count > {{ hall['free_capacity'] }} ? {{ hall['free_capacity'] }} : count;
                     $input.val(count);
 
                     $input.change();
