--- a/app/frontend/templates/settings.html
+++ b/app/frontend/templates/settings.html
@@ -58,7 +58,7 @@
                             </div>
                         </div>
                         <div class="mb-3">
-                            <h1 class="display-5">Google Calendar</h1> {# TODO #}
+                            <h1 class="display-5">Google Calendar</h1>
                             <div>
                                 {% if not session['gcalendar'] %}
                                     <a class="btn btn-lg btn-primary text-light rounded-pill" href="{{ url_for('google') }}">
