--- a/app/frontend/templates/artist.html
+++ b/app/frontend/templates/artist.html
@@ -95,7 +95,7 @@
                                                     <div class="col-md">
                                                         <div class="card-body">
                                                             <h5 class="card-title">{{ _('Place') }}</h5>
-                                                            <p class="card-text text-truncate">{{ c["concert_address"] }}</p>
+                                                            <p class="card-text text-truncate">{{ c["hall"]['hall_name'] }}</p>
                                                         </div>
                                                     </div>
                                                     <div class="col-md">
